# rtos_on_pico

./: CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
cmake/: Findfreertos.cmake
